[gd_scene load_steps=5 format=2]

[ext_resource path="res://Bugs/Bug.tscn" type="PackedScene" id=1]
[ext_resource path="res://Bugs/Spawner.gd" type="Script" id=2]
[ext_resource path="res://Game.gd" type="Script" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 240, 0, 0, 0, 0, 0, 240, 160, 0, 0, 0, 0, 0, 160 )
}

[node name="Node" type="Node"]
script = ExtResource( 4 )

[node name="Bug" parent="." instance=ExtResource( 1 )]

[node name="Spawner" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="SpawnTimer" type="Timer" parent="Spawner"]

[node name="BugPath" type="Path2D" parent="Spawner"]
curve = SubResource( 1 )

[node name="BugSpawnLocation" type="PathFollow2D" parent="Spawner/BugPath"]

[connection signal="timeout" from="Spawner/SpawnTimer" to="Spawner" method="_on_SpawnTimer_timeout"]
